# Corona-Test-Comparison

./: .gitignore  01_pdftable_to_csv.py  LICENSE  README.md  app.py  corona.ini  download_and_convert_data.py  pyproject.toml  requirements.txt  run.sh
templates/: about.html  ajax_table.html  base.html  footer.html  help.html  index.html  nav.html
